[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cubeball"
version = "0.1.0"
description = "Multi-agent Gymnasium/RLlib environment wrapping the Cubeball Godot game."
requires-python = ">=3.10"
dependencies = [
    "gymnasium",
    "ray[rllib]",
    "godot-rl",
    "torch",
    "numpy",
]

[tool.setuptools]
py-modules = ["cubeball"]
